--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,13 @@
 <div class="wrapper">
 
   <!-- Início do header -->
-  <header class="main-header">
-  <nav class="navbar navbar-static-top">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand"><b>Meat</b></a>
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-          <i class="fa fa-bars"></i>
-        </button>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Restaurantes</a></li>
-            <li><a href="#">Sobre</a></li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-
-    </div>
-  </nav>
-  </header>
+  <mt-header></mt-header>
   <!-- Fim do header -->
 
   <!-- Full Width Column -->
   <div class="content-wrapper">
     <div class="container">
-
-      {{content}}
-
+      <router-outlet></router-outlet>
     </div>
   </div>
 
@@ -41,7 +18,7 @@
       <div class="pull-right hidden-xs">
         <b>Version</b> 1.0.0
       </div>
-      <strong>Meat</strong> Angular Application
+      <strong>Meat</strong> Angular Application &copy;
     </div>
   </footer>
 </div>
