--- a/src/app/restaurants-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurants-detail/shopping-cart/shopping-cart.component.html
@@ -14,8 +14,11 @@
         <table class="table">
           <tbody>
           <tr *ngFor="let item of items()">
-            <th>{{item.menuItem.name}}</th>
+            <th>({{item.quantity}}x) {{item.menuItem.name}}</th>
             <td class="text-right">{{item.value() | currency:'BRL': true}}</td>
+            <td class="text-rigth">
+              <a (click)="removeItem(item)" class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
+            </td>
           </tr>
           <tr>
             <th>Total:</th>
@@ -26,7 +29,7 @@
   </div>
   <div class="box-footer" *ngIf="items().length">
     <div class="pull-right">
-      <button type="button" class="btn btn-danger"><i class="fa fa-trash"></i> Limpar</button>
+      <button (click)="clear()" type="button" class="btn btn-danger"><i class="fa fa-trash"></i> Limpar</button>
       <a href="order.html" class="btn btn-success"><i class="fa fa-credit-card"></i> Fechar Pedido</a>
     </div>
 </div>
