--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -24,12 +24,12 @@
             <input type="text" name="address" ngModel required minlength="5" autocomplete="off" class="form-control" placeholder="Endereço" >
           </mt-input-container>
         </div>
-        <div class="col-sm-2 col-xs-6">
-          <mt-input-container errorMessage="Campo obrigatório" label="Número" >
-             <input type="text" class="form-control" id="inputSuccess" name="number" required ngModel placeholder="Número" autocomplete="off">
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="Obrigatório e somente número" label="Número" >
+             <input type="text" class="form-control" id="inputSuccess" name="number" pattern="^[0-9]*$" required ngModel placeholder="Número" autocomplete="off">
           </mt-input-container>
         </div>
-        <div class="col-sm-4 col-xs-6">
+        <div class="col-sm-3 col-xs-6">
           <mt-input-container>
              <input type="text" class="form-control" id="inputSuccess" name="optional" ngModel placeholder="Complemento">
           </mt-input-container>
@@ -43,50 +43,14 @@
         <div class="col-xs-12">
           <p class="lead">Itens do Pedido:</p>
         </div>
-        <div class="col-xs-12 table-responsive">
+        
+        <mt-order-items 
+          [items]="cartItems()" 
+          (increaseQty)="increaseQty($event)" 
+          (decreaseQty)="decreaseQty($event)" 
+          (remove)="remove($event)" >
+        </mt-order-items>
 
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th class="text-center">Quantidade</th>
-                <th>Item</th>
-                <th>Descrição</th>
-                <th class="text-right">Subtotal</th>
-                <th class="text-right"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="text-center">
-                  <a class="btn btn-sm"><i class="fa fa-minus"></i></a> 1
-                  <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                </td>
-                <td>Cup Cake</td>
-
-                <td>Recheado com doce de leite</td>
-                <td class="text-right">R$ 10,00</td>
-                <td class="text-right">
-                  <a class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center">
-                  <a class="btn btn-sm"><i class="fa fa-minus"></i></a> 1
-                  <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                </td>
-                <td>Croissant</td>
-
-                <td>Recheado com presunto e queijo</td>
-                <td class="text-right">R$ 10,00</td>
-                <td class="text-right">
-                  <a class="btn btn-sm danger "><i class="fa fa-remove"></i></a>
-                </td>
-              </tr>
-
-            </tbody>
-          </table>
-        </div>
-        <!-- /.col -->
       </div>
       <!-- /.row -->
 
@@ -96,29 +60,8 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-            <div>
-              <label>
-                <div class="iradio_flat-red checked" aria-checked="false" aria-disabled="false"
-                    style="position: relative;">
-                    <input type="radio" name="r3" class="flat-red" checked="" style="position: absolute; opacity: 0;"/>
-                    <ins class="iCheck-helper" style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
-                </div>
-                Dinheiro
-              </label>
-            </div>
-            <div>
-              <label>
-                <div class="iradio_flat-red" aria-checked="false" aria-disabled="false"
-                    style="position: relative;">
-                    <input type="radio" name="r3" class="flat-red" checked="" style="position: absolute; opacity: 0;"/>
-                    <ins class="iCheck-helper" style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
-                </div>
-                Cartão de Débito
-              </label>
-            </div>
-
+            <mt-radio [options]="paymentOptions" name="paymentOption" ngModel ></mt-radio>
           </div>
-
         </div>
         <!-- /.col -->
         <div class="col-sm-6 col-xs-12">
