--- a/src/app/order/order-items/order-items.component.html
+++ b/src/app/order/order-items/order-items.component.html
@@ -1,9 +1,9 @@
-<div class="col-xs-12" *ngIf="!item" >
+<div class="col-xs-12" *ngIf="items.length === 0" >
   <p>
     Não hé items no seu carrinho. Que tal começar por <b><a [routerLink]="['/restaurants']" >aqui</a></b>?
   </p>
 </div>
-<div class="col-xs-12 table-responsive" *ngIf="item">
+<div class="col-xs-12 table-responsive" *ngIf="items.length > 0">
   <table class="table table-striped">
     <thead>
       <tr>
@@ -18,7 +18,7 @@
       <tr *ngFor="let item of items" >
         <td class="text-center">
           <a (click)="emitDecreaseQty(item)" class="btn btn-sm"><i class="fa fa-minus"></i></a>
-            {{item.quatity}}
+            {{item.quantity}}
           <a (click)="emitIncreaseQty(item)" class="btn btn-sm"><i class="fa fa-plus"></i></a>
         </td>
         <td>{{item.menuItem.name}}</td>
