--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container>
-             <input type="text" class="form-control" id="inputSuccess" name="optional" ngModel placeholder="Complemento">
+             <input type="text" class="form-control" id="inputSuccess" name="optionalAddress" ngModel placeholder="Complemento">
           </mt-input-container>
         </div>
         <!-- /.col -->
@@ -78,7 +78,9 @@
 
     <div class="row">
       <div class="col-xs-12">
-       <button [disabled]="!form.valid || cartItems().length === 0" class="btn btn-success pull-right"><i class="fa fa-credit-card"></i> Concluir Pedido</button>
+       <button [disabled]="!form.valid || cartItems().length === 0" 
+          (click)="checkOrder(form.value)" class="btn btn-success pull-right">
+          <i class="fa fa-credit-card"></i> Concluir Pedido</button>
       </div>
     </div>
 
