refatorando o formularios para formGroup e separando modulo de about

--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -3,10 +3,7 @@
 
 <section class="content">
   <section class="invoice">
-    {{form.valid}}
-    {{form.value | json}}
-
-    <form #form="ngForm" novalidate>
+    <form [formGroup]="orderForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -14,24 +11,47 @@
           </h2>
         </div>
       </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-9">
+          <p class="lead">Seus Dados:</p>
+        </div>
+        <div class="col-xs-12 col-sm-3">
+          <span class="help-block pull-right has-error-block" *ngIf="orderForm.hasError('emailsNotMatch')"><i class="fa fa-remove" ></i> Emails não conferem</span>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+          <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Nome" >
+            <input type="text" formControlName="name" autocomplete="off" class="form-control" placeholder="Nome" >
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="Email inválido" label="Email" >
+             <input type="text" class="form-control" id="inputSuccess" formControlName="email" placeholder="Email" autocomplete="off">
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="Email inválido" label="Email" >
+             <input type="text" class="form-control" id="inputSuccess" formControlName="emailConfirmation" placeholder="Confirmação do email">
+          </mt-input-container>
+        </div>
+      </div>
 
-      <div class="row invoice-info">
+      <div class="row">
         <div class="col-xs-12">
           <p class="lead">Endereço de Entrega:</p>
         </div>
         <div class="col-sm-6 col-xs-12">
           <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Endereço" >
-            <input type="text" name="address" ngModel required minlength="5" autocomplete="off" class="form-control" placeholder="Endereço" >
+            <input type="text" formControlName="address" autocomplete="off" class="form-control" placeholder="Endereço" >
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container errorMessage="Obrigatório e somente número" label="Número" >
-             <input type="text" class="form-control" id="inputSuccess" name="number" pattern="^[0-9]*$" required ngModel placeholder="Número" autocomplete="off">
+             <input type="text" class="form-control" id="inputSuccess" formControlName="number" placeholder="Número" autocomplete="off">
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container>
-             <input type="text" class="form-control" id="inputSuccess" name="optionalAddress" ngModel placeholder="Complemento">
+             <input type="text" class="form-control" id="inputSuccess" formControlName="optionalAddress"  placeholder="Complemento">
           </mt-input-container>
         </div>
         <!-- /.col -->
@@ -60,7 +80,7 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-            <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required ></mt-radio>
+            <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
           </div>
         </div>
         <!-- /.col -->
@@ -78,8 +98,8 @@
 
     <div class="row">
       <div class="col-xs-12">
-       <button [disabled]="!form.valid || cartItems().length === 0" 
-          (click)="checkOrder(form.value)" class="btn btn-success pull-right">
+       <button [disabled]="!orderForm.valid || cartItems().length === 0" 
+          (click)="checkOrder(orderForm.value)" class="btn btn-success pull-right">
           <i class="fa fa-credit-card"></i> Concluir Pedido</button>
       </div>
     </div>
