--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -1,7 +1,18 @@
 <section class="content-header">
    <h1>
      Todos os Restaurantes
+     <a (click)="toggleSearch()" class="search-link pull-right"><i class="fa fa-search"></i></a>
    </h1>
+   <!-- Barra de busca -->
+   <div class="row">
+     <div class="col-xs-12 search-bar" [@toggleSearch]="searchBarState" >
+        <form>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Oque você está procurando?">
+          </div>
+        </form>
+     </div>
+   </div>
  </section>
 
 <section class="content">
