add search for restaurants

--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -1,14 +1,17 @@
 <section class="content-header">
    <h1>
      Todos os Restaurantes
-     <a (click)="toggleSearch()" class="search-link pull-right"><i class="fa fa-search"></i></a>
+     <a (click)="toggleSearch()" class="search-link pull-right">
+      <span *ngIf="iptSearch.value" class="searchValue"> <small> "{{iptSearch.value}}" </small> </span>
+      <i class="fa fa-search"></i>
+      </a>
    </h1>
    <!-- Barra de busca -->
    <div class="row">
      <div class="col-xs-12 search-bar" [@toggleSearch]="searchBarState" >
-        <form>
+        <form [formGroup]="searchForm" >
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Oque você está procurando?">
+            <input type="text" class="form-control" #iptSearch formControlName="searchControl" placeholder="Oque você está procurando?">
           </div>
         </form>
      </div>
@@ -19,6 +22,11 @@
   <div class="row">
     <div *ngFor="let restaurant of restaurants" class="col-sm-6 col-xs-12">
       <mt-restaurant [restaurant]="restaurant"></mt-restaurant>
+    </div>
+    <div *ngIf="restaurants?.length === 0" class="col-xs-12">
+      <p class="lead text-center">
+        Não foram encontrados itens para sua busca.
+      </p>
     </div>
   </div>
 </section>
